# vg_stub

./: pyproject.toml
src/vg_stub/: __init__.py  _name.py  cite.py  create_vg.py  text.py  utils.py
src/vg_stub/_terms/: _genres.py  _term.py  _years.py
src/vg_stub/termologies/: _genres.py  _term.py
src/vg_stub/terms/: __init__.py  _genres.py  _term.py  _years.py
