[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "vg_stub"
version = "0.0.1"
description = "A tool generate wikitext for video-game stubs."
authors = [{ name = "For Each ... Next", email = "for_each_next@outlook.com" }]
license = { text = "MIT License" }
classifiers = ["Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Private :: Do Not Upload",
]
requires-python = ">=3.14"
dependencies = [
    'mwparserfromhell',
    'pypinyin',
    'pykakasi',
    'zhconv-rs',
    'PySide6',
]

[tool.ruff]
line-length = 79
preview = true
show-fixes = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = ["CPY001"]

[tool.ruff.lint.extend-per-file-ignores]
"scripts/*.py" = ["INP001"]
"tests/*.py" = ["INP001"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 72
max-line-length = 79

[tool.ruff.lint.pydocstyle]
convention = "pep257"
